# ClapPluginCppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
src/: Clap.cppm  Factory.cpp  Plugin.cpp  Plugin.cppm  Plugin.h  Utils.cppm  Utils.h
